# 24Finance

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yaml  pyproject.toml  requirements-dashboard.in  requirements-dashboard.txt  requirements-developer.in  requirements-developer.txt  requirements.in  requirements.txt  setup.py  streamlit_app.py
config/: config.toml  rss_urls.yaml
data/: news_data_processed.csv  rss_feed_df.csv  rss_feed_with_content_df.csv
data/dashboard/: commodities_dashboard.csv  portfolio_dashboard.csv  user_dashboard.csv
data/user/commodities/: commodities.csv
data/user/user_portfolio/: user_portfolio.csv
data/vector_db/news_vector_db/2dee2df6-8ab7-4721-9269-7e35b41930c8/: index_metadata.pickle
lib/: utils.py
lib/content_matching/: matching.py
lib/embedding/: custom_embedding.py
lib/llm/: model.py
lib/prompting/: prompts.py
lib/scraping/: scrap.py
lib/text_processing/: splitting.py
lib/vector/: querying.py  structure.py
lib/viz/: commodities.py  dashboard.py  dashboard_sequential.py  dashboard_side_menu.py  home.py  main.py  main_dashboard.py  overview.py  portfolio.py  utils.py
notebooks/: 24finance.ipynb  Product.ipynb  collect_news.ipynb  llm_test.ipynb  main_workflow.ipynb  news_vector_db_creation.ipynb  scraper_tests.py  stocks_vector_db_creation.ipynb  test_nb.ipynb  vector_db_creation.ipynb  vector_db_creation_news.ipynb  vector_db_creation_portfolio.ipynb
secrets/: secrets.yaml
